module12/istio/2.l7/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple
spec:
  gateways:
    - simple
  hosts:
    - simple.cncamp.io    # 域名校验
  http:
    - match:
      - uri:                # 匹配：uri
          exact: "/simple/hello"
      rewrite:              # 支持rewrite, 重新发布，重新对应后端
        uri: "/hello"
      route:
        - destination:
            host: simple.simple.svc.cluster.local
            port:
              number: 80
    - match:
      - uri:
          prefix: "/nginx"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nginx.simple.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: simple
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - simple.cncamp.io
      port:
        name: http-simple
        number: 80
        protocol: HTTP
